--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main>
     <section id="about" class="intro d-flex flex-column flex-md-row align-items-center justify-content-center py-5">
-      <img src="ico.jpg" alt="My Photo" class="rounded-circle mb-4 mb-md-0" style="width: 200px; height: 200px; object-fit: cover;">
+      <img src="icons/ico.jpg" alt="My Photo" class="rounded-circle mb-4 mb-md-0" style="width: 200px; height: 200px; object-fit: cover;">
       <div class="text-center text-md-start ms-md-5">
         <h1>Hello, I'm Beksultan</h1>
         <p>I am a student of Astana IT University. Welcome to my portfolio website!</p>
